fix(style): ♿️ contrast doe not meet standards
update destructive color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
 
-    --destructive: 0 84.2% 60.2%;
+    --destructive: 0 70.2% 51.2%;
     --destructive-foreground: 0 0% 98%;
 
     --chart-line-1: 120 100% 20%; /* green */
